--- a/4.sequence/4-1.Sequence.ipynb
+++ b/4.sequence/4-1.Sequence.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 136,
    "metadata": {
     "scrolled": true
    },
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 140,
    "metadata": {
     "scrolled": true
    },
@@ -200,66 +200,66 @@
      "text": [
       "Train on 347 samples, validate on 149 samples\n",
       "Epoch 1/400\n",
-      "347/347 [==============================] - 1s 1ms/step - loss: 663.5604 - mae: 24.3173 - val_loss: 281.2445 - val_mae: 14.6069\n",
+      "347/347 [==============================] - 1s 1ms/step - loss: 621.6038 - mae: 23.4448 - val_loss: 271.0958 - val_mae: 14.3012\n",
       "Epoch 2/400\n",
-      "347/347 [==============================] - 0s 175us/step - loss: 591.9239 - mae: 22.7702 - val_loss: 234.7158 - val_mae: 12.9414\n",
+      "347/347 [==============================] - 0s 217us/step - loss: 523.4302 - mae: 21.2768 - val_loss: 217.0744 - val_mae: 12.3091\n",
       "Epoch 3/400\n",
-      "347/347 [==============================] - 0s 183us/step - loss: 493.7240 - mae: 20.4946 - val_loss: 173.5678 - val_mae: 10.4010\n",
+      "347/347 [==============================] - 0s 210us/step - loss: 431.8189 - mae: 18.9950 - val_loss: 160.2973 - val_mae: 9.8632\n",
       "Epoch 4/400\n",
-      "347/347 [==============================] - 0s 182us/step - loss: 369.1278 - mae: 17.1861 - val_loss: 109.8224 - val_mae: 7.3056\n",
+      "347/347 [==============================] - 0s 224us/step - loss: 335.4144 - mae: 16.2233 - val_loss: 108.2965 - val_mae: 7.2378\n",
       "Epoch 5/400\n",
-      "347/347 [==============================] - 0s 184us/step - loss: 248.8572 - mae: 13.1960 - val_loss: 71.5483 - val_mae: 5.5386\n",
+      "347/347 [==============================] - 0s 213us/step - loss: 240.4238 - mae: 12.9947 - val_loss: 75.0190 - val_mae: 5.6117\n",
       "Epoch 6/400\n",
-      "347/347 [==============================] - 0s 181us/step - loss: 153.0804 - mae: 9.1948 - val_loss: 71.0275 - val_mae: 6.1627\n",
+      "347/347 [==============================] - 0s 198us/step - loss: 162.9591 - mae: 9.7059 - val_loss: 66.7593 - val_mae: 5.7422\n",
       "Epoch 7/400\n",
-      "347/347 [==============================] - 0s 180us/step - loss: 94.4723 - mae: 6.5162 - val_loss: 101.0164 - val_mae: 8.1607\n",
+      "347/347 [==============================] - 0s 187us/step - loss: 109.5975 - mae: 7.1459 - val_loss: 82.0257 - val_mae: 6.9244\n",
       "Epoch 8/400\n",
-      "347/347 [==============================] - 0s 170us/step - loss: 73.6303 - mae: 6.0714 - val_loss: 134.5712 - val_mae: 10.0922\n",
+      "347/347 [==============================] - 0s 204us/step - loss: 80.9653 - mae: 6.0457 - val_loss: 106.5822 - val_mae: 8.5034\n",
       "Epoch 9/400\n",
-      "347/347 [==============================] - 0s 170us/step - loss: 71.5573 - mae: 6.4518 - val_loss: 149.6183 - val_mae: 10.8552\n",
+      "347/347 [==============================] - 0s 196us/step - loss: 73.2148 - mae: 6.0857 - val_loss: 128.7604 - val_mae: 9.7915\n",
       "Epoch 10/400\n",
-      "347/347 [==============================] - 0s 167us/step - loss: 72.4017 - mae: 6.6374 - val_loss: 148.7656 - val_mae: 10.8146\n",
+      "347/347 [==============================] - 0s 215us/step - loss: 71.5987 - mae: 6.3666 - val_loss: 139.1846 - val_mae: 10.3405\n",
       "Epoch 11/400\n",
-      "347/347 [==============================] - 0s 171us/step - loss: 72.1456 - mae: 6.5829 - val_loss: 144.8141 - val_mae: 10.6214\n",
+      "347/347 [==============================] - 0s 218us/step - loss: 71.8733 - mae: 6.5354 - val_loss: 141.8897 - val_mae: 10.4790\n",
       "Epoch 12/400\n",
-      "347/347 [==============================] - 0s 172us/step - loss: 71.9292 - mae: 6.4685 - val_loss: 138.5561 - val_mae: 10.3050\n",
+      "347/347 [==============================] - 0s 193us/step - loss: 71.6970 - mae: 6.4855 - val_loss: 137.0282 - val_mae: 10.2292\n",
       "Epoch 13/400\n",
-      "347/347 [==============================] - 0s 170us/step - loss: 71.8787 - mae: 6.3673 - val_loss: 136.0259 - val_mae: 10.1738\n",
+      "347/347 [==============================] - 0s 175us/step - loss: 71.5227 - mae: 6.4153 - val_loss: 134.4965 - val_mae: 10.0960\n",
       "Epoch 14/400\n",
-      "347/347 [==============================] - 0s 178us/step - loss: 71.8282 - mae: 6.3478 - val_loss: 135.0448 - val_mae: 10.1229\n",
+      "347/347 [==============================] - 0s 178us/step - loss: 71.5162 - mae: 6.3650 - val_loss: 132.0950 - val_mae: 9.9711\n",
       "Epoch 15/400\n",
-      "347/347 [==============================] - 0s 166us/step - loss: 71.8804 - mae: 6.3779 - val_loss: 137.9170 - val_mae: 10.2750\n",
+      "347/347 [==============================] - 0s 187us/step - loss: 71.5567 - mae: 6.3211 - val_loss: 131.0088 - val_mae: 9.9142\n",
       "Epoch 16/400\n",
-      "347/347 [==============================] - 0s 170us/step - loss: 71.7992 - mae: 6.3774 - val_loss: 135.8878 - val_mae: 10.1699\n",
+      "347/347 [==============================] - 0s 175us/step - loss: 71.5399 - mae: 6.3389 - val_loss: 132.3334 - val_mae: 9.9848\n",
       "Epoch 17/400\n",
-      "347/347 [==============================] - 0s 173us/step - loss: 71.7686 - mae: 6.3588 - val_loss: 134.8859 - val_mae: 10.1186\n",
+      "347/347 [==============================] - 0s 181us/step - loss: 71.5148 - mae: 6.3448 - val_loss: 132.8126 - val_mae: 10.0106\n",
       "Epoch 18/400\n",
-      "347/347 [==============================] - 0s 164us/step - loss: 71.8393 - mae: 6.3633 - val_loss: 134.1809 - val_mae: 10.0828\n",
+      "347/347 [==============================] - 0s 181us/step - loss: 71.5499 - mae: 6.3595 - val_loss: 131.9024 - val_mae: 9.9634\n",
       "Epoch 19/400\n",
-      "347/347 [==============================] - 0s 168us/step - loss: 71.7994 - mae: 6.3892 - val_loss: 137.3026 - val_mae: 10.2488\n",
+      "347/347 [==============================] - 0s 181us/step - loss: 71.4954 - mae: 6.3607 - val_loss: 133.5163 - val_mae: 10.0486\n",
       "Epoch 20/400\n",
-      "347/347 [==============================] - 0s 163us/step - loss: 71.7696 - mae: 6.3906 - val_loss: 134.6349 - val_mae: 10.1102\n",
+      "347/347 [==============================] - 0s 178us/step - loss: 71.5184 - mae: 6.3899 - val_loss: 132.9612 - val_mae: 10.0204\n",
       "Epoch 21/400\n",
-      "347/347 [==============================] - 0s 160us/step - loss: 71.7478 - mae: 6.3503 - val_loss: 133.6494 - val_mae: 10.0588\n",
+      "347/347 [==============================] - 0s 178us/step - loss: 71.5375 - mae: 6.3933 - val_loss: 133.5451 - val_mae: 10.0516\n",
       "Epoch 22/400\n",
-      "347/347 [==============================] - 0s 160us/step - loss: 71.7624 - mae: 6.3272 - val_loss: 132.8551 - val_mae: 10.0182\n",
+      "347/347 [==============================] - 0s 181us/step - loss: 71.5881 - mae: 6.3459 - val_loss: 129.0993 - val_mae: 9.8173\n",
       "Epoch 23/400\n",
-      "347/347 [==============================] - 0s 167us/step - loss: 71.6435 - mae: 6.3641 - val_loss: 134.5193 - val_mae: 10.1094\n",
+      "347/347 [==============================] - 0s 181us/step - loss: 71.5781 - mae: 6.3545 - val_loss: 132.5340 - val_mae: 10.0006\n",
       "Epoch 24/400\n",
-      "347/347 [==============================] - 0s 161us/step - loss: 71.6278 - mae: 6.3951 - val_loss: 135.1316 - val_mae: 10.1442\n",
+      "347/347 [==============================] - 0s 181us/step - loss: 71.4788 - mae: 6.3971 - val_loss: 132.7769 - val_mae: 10.0141\n",
       "Epoch 25/400\n",
-      "347/347 [==============================] - 0s 159us/step - loss: 71.6416 - mae: 6.3975 - val_loss: 133.6821 - val_mae: 10.0698\n",
+      "347/347 [==============================] - 0s 175us/step - loss: 71.4345 - mae: 6.3645 - val_loss: 131.0961 - val_mae: 9.9269\n",
       "Epoch 26/400\n",
-      "347/347 [==============================] - 0s 161us/step - loss: 71.7620 - mae: 6.4353 - val_loss: 135.0858 - val_mae: 10.1472\n"
+      "347/347 [==============================] - 0s 178us/step - loss: 71.3689 - mae: 6.3414 - val_loss: 129.1967 - val_mae: 9.8268\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.callbacks.History at 0x28a98c8cc88>"
+       "<keras.callbacks.callbacks.History at 0x13326ab1648>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,27 +273,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "496/496 [==============================] - 0s 59us/step\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[100.3566399851153, 6.980691432952881]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.evaluate(data, d.target[lags:])"
    ]
